# Intrusion-Detection-ENV

./: Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  uv.lock.bak
server/: Dockerfile  app.py  network_environment.py  requirements.txt  reward_engine.py  scenario_generator.py  tool_registry.py
