[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-diagnostics-env"
version = "0.1.0"
description = "Network Diagnostics RL Environment"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "."]
